# Txt2Pdf

./: .env.example  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  ruff.toml
app/: container.py  main.py
app/api/: api__handler.py  conventer.py
app/services/: config_service.py
app/utils/: convert_txt.py
scripts/: run.sh  test.sh
tests/: conftest.py  file.txt  test.hurl  test_convert.hurl  test_convert.py
